fix: adjust position of date range picker for better alignment

--- a/src/app/features/tasks/components/task-filters/task-filters.css
+++ b/src/app/features/tasks/components/task-filters/task-filters.css
@@ -84,7 +84,7 @@
     :host ::ng-deep .md-drppicker,
     .daterangepicker {
         position: absolute !important;
-        top: 225px !important;
+        top: 170px !important;
     }
 }
 
